--- a/index.html
+++ b/index.html
@@ -174,32 +174,14 @@
                             <div class="resume_items">
                                 <div class="resume_item">
                                     <div class="resume_header">
-                                        <h3 class="resume_subtitle">Politeknik Negeri Medan</h3>
+                                        <h3 class="resume_subtitle">PT Putra Sion Mandiri</h3>
                                         <span class="resume_icon">+</span>
                                     </div>
 
                                     <div class="resume_content">
                                         <div class="resume_date-title">
-                                            <h3 class="resume_title">Software Engineering Technology</h3>
-                                            <span class="resume_date">2024 - Now</span>
-                                        </div>
-
-                                        <p class="resume_desc">
-                                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum praesentium eum possimus quam dignissimos deserunt officiis iusto distinctio assumenda eveniet!
-                                        </p>
-                                    </div>
-                                </div>
-
-                                <div class="resume_item">
-                                    <div class="resume_header">
-                                        <h3 class="resume_subtitle">SMK Telkom 1 Medan</h3>
-                                        <span class="resume_icon">-</span>
-                                    </div>
-
-                                    <div class="resume_content">
-                                        <div class="resume_date-title">
-                                            <h3 class="resume_title">Software Engineering</h3>
-                                            <span class="resume_date">2021 - 2024</span>
+                                            <h3 class="resume_title">Intern</h3>
+                                            <span class="resume_date">June 2023 - August 2023</span>
                                         </div>
 
                                         <p class="resume_desc">
