--- a/index.html
+++ b/index.html
@@ -170,7 +170,6 @@
                         <!-- work experience-->
                         <div class="resume_group">
                             <h3 class="resume_heading">Work Experience</h3>
-
                             <div class="resume_items">
                                 <div class="resume_item">
                                     <div class="resume_header">
@@ -193,7 +192,67 @@
                         </div>
                     </div>
                 </section>
-                <section class="services" id="services"></section>
+                <section class="services section" id="services">
+                    <h2 class="section_title title-center" data-title="Services">
+                        What I Do For You
+                    </h2>
+
+                    <div class="services_container container grid">
+                        <div class="services_item">
+                            <i class="fa-solid fa-pen-to-square services_icon"></i>
+                            <h3 class="services_title">UI/UX Design</h3>
+                            <p class="services_desc">
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias assumenda et suscipit delectus nesciunt debitis.
+                            </p>
+                            <span class="services_no">01</span>
+                        </div>
+
+                        <div class="services_item">
+                            <i class="fa-solid fa-window-maximize services_icon"></i>
+                            <h3 class="services_title">Website Development</h3>
+                            <p class="services_desc">
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias assumenda et suscipit delectus nesciunt debitis.
+                            </p>
+                            <span class="services_no">02</span>
+                        </div>
+
+                        <div class="services_item">
+                            <i class="fa-solid fa-chart-simple services_icon"></i>
+                            <h3 class="services_title">Market Research</h3>
+                            <p class="services_desc">
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias assumenda et suscipit delectus nesciunt debitis.
+                            </p>
+                            <span class="services_no">03</span>
+                        </div>
+
+                        <div class="services_item">
+                            <i class="fa-solid fa-magnifying-glass-chart services_icon"></i>
+                            <h3 class="services_title">Search Engine Optimization</h3>
+                            <p class="services_desc">
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias assumenda et suscipit delectus nesciunt debitis.
+                            </p>
+                            <span class="services_no">04</span>
+                        </div>
+
+                        <div class="services_item">
+                            <i class="fa-solid fa-code services_icon"></i>
+                            <h3 class="services_title">Programming</h3>
+                            <p class="services_desc">
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias assumenda et suscipit delectus nesciunt debitis.
+                            </p>
+                            <span class="services_no">05</span>
+                        </div>
+
+                        <div class="services_item">
+                            <i class="fa-brands fa-wordpress services_icon"></i>
+                            <h3 class="services_title">Wordpress</h3>
+                            <p class="services_desc">
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias assumenda et suscipit delectus nesciunt debitis.
+                            </p>
+                            <span class="services_no">06</span>
+                        </div>
+                    </div>
+                </section>
                 <section class="portfolio" id="portfolio"></section>
                 <section class="contact" id="contact"></section>
             </main>
