Pembuatan fitur portofolio

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                         <a href="#experience" class="nav_link">Experience</a>
                     </li>
                     <li class="nav_item">
-                        <a href="#services" class="nav_link">Services</a>
+                        <a href="#skills" class="nav_link">Skills</a>
                     </li>
                     <li class="nav_item">
                         <a href="#portfolio" class="nav_link">Portfolio</a>
@@ -192,68 +192,116 @@
                         </div>
                     </div>
                 </section>
-                <section class="services section" id="services">
-                    <h2 class="section_title title-center" data-title="Services">
-                        What I Do For You
+                <section class="skills section" id="skills">
+                    <h2 class="section_title title-center" data-title="My Talents">
+                        Skills
                     </h2>
 
-                    <div class="services_container container grid">
-                        <div class="services_item">
-                            <i class="fa-solid fa-pen-to-square services_icon"></i>
-                            <h3 class="services_title">UI/UX Design</h3>
-                            <p class="services_desc">
+                    <div class="skills_container container grid">
+                        <div class="skills_item">
+                            <i class="fa-solid fa-pen-to-square skills_icon"></i>
+                            <h3 class="skills_title">UI/UX Design</h3>
+                            <p class="skills_desc">
                                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias assumenda et suscipit delectus nesciunt debitis.
                             </p>
-                            <span class="services_no">01</span>
+                            <span class="skills_no">01</span>
                         </div>
 
-                        <div class="services_item">
-                            <i class="fa-solid fa-window-maximize services_icon"></i>
-                            <h3 class="services_title">Website Development</h3>
-                            <p class="services_desc">
+                        <div class="skills_item">
+                            <i class="fa-solid fa-window-maximize skills_icon"></i>
+                            <h3 class="skills_title">Website Development</h3>
+                            <p class="skills_desc">
                                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias assumenda et suscipit delectus nesciunt debitis.
                             </p>
-                            <span class="services_no">02</span>
+                            <span class="skills_no">02</span>
                         </div>
 
-                        <div class="services_item">
-                            <i class="fa-solid fa-chart-simple services_icon"></i>
-                            <h3 class="services_title">Market Research</h3>
-                            <p class="services_desc">
+                        <div class="skills_item">
+                            <i class="fa-solid fa-chart-simple skills_icon"></i>
+                            <h3 class="skills_title">Market Research</h3>
+                            <p class="skills_desc">
                                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias assumenda et suscipit delectus nesciunt debitis.
                             </p>
-                            <span class="services_no">03</span>
+                            <span class="skills_no">03</span>
                         </div>
 
-                        <div class="services_item">
-                            <i class="fa-solid fa-magnifying-glass-chart services_icon"></i>
-                            <h3 class="services_title">Search Engine Optimization</h3>
-                            <p class="services_desc">
+                        <div class="skills_item">
+                            <i class="fa-solid fa-magnifying-glass-chart skills_icon"></i>
+                            <h3 class="skills_title">Search Engine Optimization</h3>
+                            <p class="skills_desc">
                                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias assumenda et suscipit delectus nesciunt debitis.
                             </p>
-                            <span class="services_no">04</span>
+                            <span class="skills_no">04</span>
                         </div>
 
-                        <div class="services_item">
-                            <i class="fa-solid fa-code services_icon"></i>
-                            <h3 class="services_title">Programming</h3>
-                            <p class="services_desc">
+                        <div class="skills_item">
+                            <i class="fa-solid fa-code skills_icon"></i>
+                            <h3 class="skills_title">Programming</h3>
+                            <p class="skills_desc">
                                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias assumenda et suscipit delectus nesciunt debitis.
                             </p>
-                            <span class="services_no">05</span>
+                            <span class="skills_no">05</span>
                         </div>
 
-                        <div class="services_item">
-                            <i class="fa-brands fa-wordpress services_icon"></i>
-                            <h3 class="services_title">Wordpress</h3>
-                            <p class="services_desc">
+                        <div class="skills_item">
+                            <i class="fa-brands fa-wordpress skills_icon"></i>
+                            <h3 class="skills_title">Wordpress</h3>
+                            <p class="skills_desc">
                                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias assumenda et suscipit delectus nesciunt debitis.
                             </p>
-                            <span class="services_no">06</span>
+                            <span class="skills_no">06</span>
                         </div>
                     </div>
                 </section>
-                <section class="portfolio" id="portfolio"></section>
+                <section class="portfolio section" id="portfolio">
+                    <h2 class="section_title title-center" data-title="My Portfolio">
+                        Projects and Works
+                    </h2>
+                    <div class="work_container container grid">
+                        <div class="work_card">
+                            <img src="assets/img/Untitled design.png" alt="" class="work_img">
+                            <div class="work_details">
+                                <h3 class="work_title">Cinemapedia</h3>
+                                <span class="work_desc">Lorem ipsum dolor sit amet consectetur.</span>
+                            </div>
+                        </div>
+                        <div class="work_card">
+                            <img src="assets/img/Gambar WhatsApp 2025-06-14 pukul 14.07.28_40691f6a.jpg" alt="" class="work_img">
+                            <div class="work_details">
+                                <h3 class="work_title">MasterTenses</h3>
+                                <span class="work_desc">Lorem ipsum dolor sit amet consectetur.</span>
+                            </div>
+                        </div>
+                        <div class="work_card">
+                            <img src="assets/img/Untitled design.png" alt="" class="work_img">
+                            <div class="work_details">
+                                <h3 class="work_title">OnLibrary</h3>
+                                <span class="work_desc">Lorem ipsum dolor sit amet consectetur.</span>
+                            </div>
+                        </div>
+                        <div class="work_card">
+                            <img src="assets/img/Untitled design.png" alt="" class="work_img">
+                            <div class="work_details">
+                                <h3 class="work_title">Project 4</h3>
+                                <span class="work_desc">Lorem ipsum dolor sit amet consectetur.</span>
+                            </div>
+                        </div>
+                        <div class="work_card">
+                            <img src="assets/img/Untitled design.png" alt="" class="work_img">
+                            <div class="work_details">
+                                <h3 class="work_title">Project 5</h3>
+                                <span class="work_desc">Lorem ipsum dolor sit amet consectetur.</span>
+                            </div>
+                        </div>
+                        <div class="work_card">
+                            <img src="assets/img/Untitled design.png" alt="" class="work_img">
+                            <div class="work_details">
+                                <h3 class="work_title">Project 6</h3>
+                                <span class="work_desc">Lorem ipsum dolor sit amet consectetur.</span>
+                            </div>
+                        </div>
+                    </div>
+                </section>
                 <section class="contact" id="contact"></section>
             </main>
             <footer class="footer"></footer>
