Penambahan fitur kontak

--- a/index.html
+++ b/index.html
@@ -302,8 +302,55 @@
                         </div>
                     </div>
                 </section>
-                <section class="contact" id="contact"></section>
-            </main>
-            <footer class="footer"></footer>
-        </body>
-        </html>
+
+                <section class="contact section" id="contact">
+                    <h2 class="section_title title-center" data-title="Get In Touch">
+                        Contact Me
+                    </h2>
+                    <div class="contact_container container grid">
+                        <div class="contact_details">
+                            <div class="contact_item">
+                                <i class="fa-solid fa-phone contact_icon"></i>
+                                <div>
+                                    <h3 class="contact_title">Phone Number</h3>
+                                    <span class="contact_data">+62 878-7710-2982</span>
+                                </div>
+                                </div>
+                                <div class="contact_item">
+                                <i class="fa-solid fa-envelope contact_icon"></i>
+                                <div>
+                                    <h3 class="contact_title">Email</h3>
+                                    <span class="contact_data">rhadityaprastito</span>
+                                </div>
+                                </div>
+                                <div class="contact_item">
+                                <i class="fa-solid fa-location-dot contact_icon"></i>
+                                <div>
+                                    <h3 class="contact_title">Address</h3>
+                                    <span class="contact_data">Irigasi Raya 99, Kota Medan, Sumatera Utara, Indonesia</span>
+                                </div>
+                                </div>
+                                </div>
+                            <form action="" class="contact_form">
+                                <div class="form_group">
+                                    <div class="form_input">
+                                        <input type="text" placeholder="Name" class="input_control">
+                                    </div>
+                                    <div class="form_input">
+                                        <input type="email" placeholder="Email" class="input_control">
+                                    </div>
+                                </div>
+                                <div class="form_input">
+                                        <input type="text" placeholder="Subject" class="input_control">
+                                    </div>
+                                <div class="form_input">
+                                    <textarea name="" id="" placeholder="Message" class="input_control textarea"></textarea>
+                                </div>
+                                <button class="btn contact_btn">Send</button>
+                            </form>
+                        </div>
+                    </section>
+                </main>
+                <footer class="footer"></footer>
+            </body>
+            </html>
